Make things work on current JDK